--- a/my-webpage.html
+++ b/my-webpage.html
@@ -7,23 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div class="Name">
+    <div>
+        <div class="column">
             <h1>Boitumelo Mokgola</h1>
             <img src="Boitumelo Mokgola.png" width="250">
         </div>
         <h2>Which city?</h2> 
-        <div class="Name">
-            <div>
+        <div class="column">
                 <img src="Cape Town.jpg" width="200">
-            </div>
-            <div>
                 <p>I would like to visit Cape Town and go to Table Mountain. I would also love to visit Robben Island and experience the vineyards. The vineyards have good wine and food.</p>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section>
+    <div>
         <div class="container">
             <h3>A foreign language</h3>
             <p>I would love to learn French as this is a language I would like to learn as I want to one day go to France. I want to visit the Louvre and see the Mona Lisa, a Leonardo Da Vinci painting. So being able to converse in that language will help when I visit the city.</p>
